# Mounasabati

./: README.md
backend/: .gitignore  README.md  app.py  main.py  pyproject.toml
backend/API/: settings.py
backend/Accounts/: serializers.py  urls.py  views.py
backend/app/: app.py  database.py
backend/app/core/: database.py
backend/app/models/: __init__.py  booking.py  citizen.py  client.py  notification.py  payment.py  reviews.py  service.py  user.py  vendor.py
backend/app/routers/: client.py
backend/app/schemas/: booking.py  client.py  service.py  user.py  vendor.py
backend/app/utils/: utils.py
backend/auth/router/: auth.py
backend/core/: database.py
backend/models/: booking.py  client.py  notification.py  payment.py  reviews.py  service.py  user.py  vendor.py
backend/routers/: service.py  vendor.py
backend/schemas/: booking.py  client.py  notification.py  payment.py  service.py  user.py  vendor.py
backend/src/core/: database.py
backend/src/models/: booking.py  client.py  notification.py  payment.py  reviews.py  service.py  user.py  vendor.py
backend/src/routers/: user.py
backend/src/schemas/: booking.py  client.py  notification.py  payment.py  service.py  vendor.py
backend/utils/: utils.py
